Added project structure for strava
